Fixed by `npm audit` and forbid names to start with whitespace

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -23,6 +23,10 @@
   font-size: $theme-font-size - $base-unit / 2;
 }
 
+.input__description--error {
+  color: red;
+}
+
 .input {
   flex: 1;
   background: none;
@@ -45,6 +49,10 @@
   border-bottom: 1px solid $color-middle-gray;
 }
 
+.input--underlined.input--error > .input {
+  border-bottom-color: red;
+}
+
 .input--underlined > .input:focus {
   border-bottom: none;
 }
@@ -57,6 +65,10 @@
 .input--underlined > .input:focus + .input__underline {
   margin-top: -1px;
   margin-bottom: 0;
+}
+
+.input--error > .input__underline {
+  background-color: red !important;
 }
 
 .input__underline {
